[gd_scene load_steps=2 format=3 uid="uid://cgdoty_status_panel"]

[ext_resource type="Script" path="res://addons/godoty_bridge/ui/status_panel.gd" id="1"]

[node name="StatusPanel" type="Control"]
custom_minimum_size = Vector2(200, 120)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Godoty Bridge"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "â—‹ Stopped"

[node name="PortLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Port: 6550"

[node name="ClientsLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Clients: 0"

[node name="ToggleButton" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Start Server"

[connection signal="pressed" from="VBox/ToggleButton" to="." method="_on_toggle_button_pressed"]
